# dual_panda_bringup

./: CMakeLists.txt  package.xml
config/: dual_panda.rviz
launch/: dual_panda.launch.py  planning_test.launch.py
moveit_config/: controllers_dual_panda.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers_dual_panda.yaml
src/: planning_test.cpp
urdf/: dual_panda.ros2_control.xacro  dual_panda.srdf  dual_panda.xacro  dual_panda_macro.xacro  panda.ros2_control.xacro  panda_macro.xacro  world_base_macro.xacro
