<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>dual_panda_bringup</name>
  <version>0.1.0</version>

  <description>
    two pandas one package
  </description>

  <maintainer email="anton.weiss@th-deg.de">Anton Weiss</maintainer>
  <author email="anton.weiss@th-deg.de">Anton Weiss</author>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>moveit_common</build_depend>

  <depend>moveit_ros_planning_interface</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>warehouse_ros_mongo</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
